FLT/INT: Migrating from wz_tooltip.js to jquery-ui.js in overview. Also many misc changes and optimizations

--- a/css/global.css
+++ b/css/global.css
@@ -1,16 +1,26 @@
-.fl{ /* Float left */
+.fl /* Float left */
+{
   float: left;
 }
 
-.fr{ /* Float right */
+.fr /* Float right */
+{
   float: right;
 }
 
-.hide{ /* Hide */
+.hide  /* Hide */
+{
   display: none;
 }
 
-.tr{
+.tr /* Transparent */
+{
   background-color: transparent;
   border: 0;
+}
+
+ul /* Unmarked list */
+{
+  margin: 0;
+  padding-left: 20;
 }
