INT: Fleet-page2: Using jQuery-UI Slider for selecting amount of resources

--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -327,3 +327,6 @@ h1
   width                : 98%;
   text-align           : right;
 }
+
+.ui-dialog { position: absolute; padding: .2em; width: 200px; overflow: hidden; background: #344055; }
+.ui-dialog .ui-dialog-titlebar { display: none; }
