--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -286,8 +286,8 @@ a:hover
 
 .style div a:link
 {
-  height               : 100%;
-  width                : 100%;
+//  height               : 100%;
+//  width                : 100%;
   color                : #f2f2f2;
   font-size            : 11px;
   font-family          : Tahoma,sans-serif;
