--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -295,8 +295,8 @@ a:hover
 
 .style div a:visited
 {
-  height               : 100%;
-  width                : 100%;
+//  height               : 100%;
+//  width                : 100%;
   color                : #f2f2f2;
   font-size            : 11px;
   font-family          : Tahoma,sans-serif;
@@ -307,8 +307,8 @@ a:hover
 
   background-repeat    : no-repeat;
   background-position  : left;
-  height               : 100%;
-  width                : 100%;
+//  height               : 100%;
+//  width                : 100%;
   text-decoration      : none;
   font-size            : 100%;
   font-family          : Tahoma,sans-serif;
