--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -286,8 +286,8 @@ a:hover
 
 .style div a:link
 {
-//  height               : 100%;
-//  width                : 100%;
+  height               : 100%;
+  width                : 100%;
   color                : #f2f2f2;
   font-size            : 11px;
   font-family          : Tahoma,sans-serif;
@@ -295,8 +295,8 @@ a:hover
 
 .style div a:visited
 {
-//  height               : 100%;
-//  width                : 100%;
+  height               : 100%;
+  width                : 100%;
   color                : #f2f2f2;
   font-size            : 11px;
   font-family          : Tahoma,sans-serif;
@@ -304,11 +304,10 @@ a:hover
 
 .style div a:hover
 {
-
   background-repeat    : no-repeat;
   background-position  : left;
-//  height               : 100%;
-//  width                : 100%;
+  height               : 100%;
+  width                : 100%;
   text-decoration      : none;
   font-size            : 100%;
   font-family          : Tahoma,sans-serif;
@@ -328,5 +327,6 @@ h1
   text-align           : right;
 }
 
-.ui-dialog { position: absolute; padding: .2em; width: 200px; overflow: hidden; background: #344055; }
-.ui-dialog .ui-dialog-titlebar { display: none; }
+/*  Patching this theme for ui-slider */
+.style .ui-slider a:link { width: 1.2em; height: 1.2em; }
+.style .ui-slider a:hover { width: 1.2em; height: 1.2em; }
