--- a/css/global.css
+++ b/css/global.css
@@ -25,6 +25,18 @@ ul /* Unmarked list */
   padding-left: 20;
 }
 
+.icon_alpha /* Partially transparent background for over-planet-image icons */
+{
+  /* Fallback for web browsers that doesn't support RGBa */
+  background: rgb(0, 0, 0);
+  /* RGBa with 0.75 opacity */
+  background: rgba(0, 0, 0, 0.75);
+  /* For IE 5.5 - 7. 0.75*255 = 191.25 ~ 0xC0 */
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000);
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000)";
+}
+
 /* jQuery-UI */
 /*--------------------------------------------------------*/
 /* Patches */
