--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -330,3 +330,6 @@ h1
 /*  Patching this theme for ui-slider */
 .style .ui-slider a:link { width: 1.2em; height: 1.2em; }
 .style .ui-slider a:hover { width: 1.2em; height: 1.2em; }
+
+/* Setting popup table background color */
+div .ui-dialog-content table { background: #040e1e; }
