--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
-    background-color:#000000;
-    background-image: url(../images/tlo.jpg);
+    background-image: url(../images/bg-unauthorized.jpg);
     background-repeat: no-repeat;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
@@ -389,143 +388,8 @@ td .eingabe {
     text-align:left;
 }
 
-.bigbutton {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    text-align: center;
-    font-weight: bold;
-    color:#497ec7;
-    cursor: pointer;
-
-    background-color     : #000000;
-    border:1px solid #FFFFFF;
-}
-
-
-.bigbutton:hover {
-    color:#ffffff;
-}
-
 .warning {
     color:#ff7876;
-}
-
-.fine {
-    color:#00ff00;
-}
-
-.register_agb {
-    color:#cccccc;
-}
-
-.register_agb:hover {
-    color:#ffffff;
-}
-
-.headline {
-  text-align:center;
-  font-weight:bold;
-  font-size:14px;
-}
-
-#gimmik_1 {
-    width:100px;
-    height:50px;
-    top:100px;
-    left:100px;
-}
-
-#gimmik_2 {
-    width:50px;
-    height:50px;
-    top:200px;
-    left:100px;
-}
-
-.iframe {
-    border:none;
-
-    width:100%;
-    height:27px;
-}
-
-.loginButton {
-    padding-top:2px;
-    padding-left:5px;
-}
-
-
-.loginButton:hover {
-    padding-top:2px;
-    padding-left:5px;
-}
-
-.bildUeberschrift {
-     font-family:Arial, Helvetica, sans-serif;
-     font-size: 10px;
-     color:#b1daf2;
-}
-
-#unis_content {
-    padding-left:70px;
-    padding-top:10px;
-}
-
-#unis_content a {
-    display: block;
-    color:#878787;
-}
-
-#unis_content a:hover {
-    color:#ffffff;
-}
-
-#unis_title2 {
-    padding-top:25px;
-    padding-bottom:3px;
-    width:380px;
-    font-size:14px;
-    font-weight:bold;
-    border-bottom-style:solid;
-    border-bottom-width:1px;
-    border-bottom-color:#2a2f33;
-}
-
-#closed_uni {
-    color:#535353;
-}
-
-
-#uni_infos_link {
-    text-align:left;
-    width:200px;
-    padding-top:3px;
-}
-
-#uni_infos_link a {
-    color:#878787;
-}
-
-#uni_infos_link a:hover {
-    color:#ffffff;
-}
-
-#uni_label {
-    vertical-align:top;
-    padding-top:3px;
-}
-
-.table_lable {
-
-}
-
-.table_input {
-    text-align:left;
-    padding-left:3px;
-}
-
-#table_agb {
-    text-align:left;
 }
 
 .fl{ /* Float left */
