--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -371,3 +371,6 @@ h1
 
 /* Setting popup table background color */
 div .ui-dialog-content table { background: #344055; }
+
+/* Icon file */
+.icons { background-image: url(images/icons.png); }
