--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -328,6 +328,85 @@ h1
   text-align           : right;
 }
 
+.ov_user_total {color: #FF0000}
+.ov_user_rank {color: #FFFF00}
+
+#left_menu {
+  font-weight: bold;
+  width: 130px;
+  margin-left:5px;
+  margin-right:5px;
+  text-align: center;
+}
+
+#left_menu #server_name {
+  color: #00FF00;
+  font-weight: bold;
+}
+
+#left_menu th {
+  color: #63698c;
+  background-image: url(img/bg1.gif);
+  background-color: #212c42;
+  text-align: center;
+}
+
+#lm_overview {
+  color: #999933;
+}
+
+#lm_fleet {
+  color: #CC3333;
+}
+
+#lm_universe {
+  color: #999966;
+}
+
+#lm_buildings {
+  color: #669933;
+}
+
+#lm_shipyard {
+  color: #993399;
+}
+
+#lm_techtree {
+  color: #999933;
+}
+
+#lm_forum {
+  color: #0066CC;
+}
+
+#lm_chat {
+  color: #996699;
+}
+
+#lm_chatally {
+  color: #996699;
+}
+
+#lm_simulator {
+  color: #FF9966;
+}
+
+#lm_search {
+  color: #887766;
+}
+
+#lm_options {
+  color: #CCCC66;
+}
+
+#lm_affilates {
+  color: #993333;
+}
+
+#lm_logout {
+  color: #993333;
+}
+
 /*  Patching this theme for ui-slider */
 .style .ui-slider a:link { width: 1.2em; height: 1.2em; }
 .style .ui-slider a:hover { width: 1.2em; height: 1.2em; }
