--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -321,11 +321,11 @@ a:hover
 
 h1
 {
-  font-size            : 11px;
+  font-size            : 200%;
   font-family          : Tahoma,sans-serif;
   border-bottom        : 0px #344566 solid;
-  width                : 98%;
-  text-align           : right;
+
+  margin-top: 16px;
 }
 
 .allymember {
