--- a/css/global.css
+++ b/css/global.css
@@ -12,11 +12,17 @@ input.button
 }
 
 /* Login and Registration screens */
+@media screen
+{
+  body {
+      background-image: url(../images/bg-unauthorized.jpg);
+      background-repeat: no-repeat;
+  }
+}
+
 body {
-    background-image: url(../images/bg-unauthorized.jpg);
-    background-repeat: no-repeat;
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #log_main {
