--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -416,3 +416,23 @@ div .ui-dialog-content table { background: #040e1e; }
 
 /* Icon file */
 .icons { background-image: url(images/icons.png); }
+
+/* Unit preview box on build pages */
+.unit_preview
+{
+  cursor: pointer;
+
+  border: 3px solid #000000;
+
+  position: relative;
+  height: 120px;
+  width: 120px;
+
+  font-size: 100%;
+}
+
+/* Pseudoelement to use colors from CSS in JS */
+#style_probe
+{
+  border-top-color: #666666;  /*  Reserved for unit_preview border color*/
+}
