--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -4,16 +4,6 @@
   font-size : 11px;
 }
 
-img
-{
-  border               : 0px;
-}
-
-table table
-{
-  border               : 0px;
-}
-
 body
 {
   color                : #FFFFFF;
@@ -35,6 +25,16 @@ body
   scrollbar-shadow-color: #465673;
 }
 
+img
+{
+  border               : 0px;
+}
+
+table table
+{
+  border               : 0px;
+}
+
 body.style table {
   margin               : 0px;
 }
@@ -44,57 +44,49 @@ body form table th table input
   width: 60px;
 }
 
-th, td.c, td.l,
-.style td, input, select, textarea
+th, td, input, select, textarea
 {
-  border               : 1px #415680 solid;
+  border         : 1px #415680 solid;
+  filter         : alpha(opacity=70);
+  -moz-opacity   : 0.7;
+  -khtml-opacity : 0.7;
+  opacity        : 0.7;
+  color          : #FFFFFF;
 }
 
-th, td.c, .style td, input, select
+th, td
 {
-  background-color     : #000000;
-  filter               : alpha(opacity=70);
-  -moz-opacity         : 0.7;
-  -khtml-opacity       : 0.7;
-  opacity              : 0.7;
-}
-
-th
-{
-  text-align           : center;
-  padding-left         : 3px;
-  padding-right        : 3px;
-}
-
-td.c
-{
-  font-weight          : bold;
-  padding-left         : 3px;
-  background-image     : url(img/bg1.gif);
+  background-color: #000000;
 }
 
 input, select, textarea
 {
-  background-color     : #1c1c1c;
-  filter               : alpha(opacity=100);
-  -moz-opacity         : 0.7;
-  -khtml-opacity       : 0.7;
-  opacity              : 0.7;
+  background-color: #1c1c1c;
 }
-textarea
+
+th
 {
-  width                : 100%;
+  text-align   : center;
+  padding-left : 3px;
+  padding-right: 3px;
+}
+
+td.c
+{
+  font-weight     : bold;
+  padding-left    : 3px;
+  background-image: url(img/bg1.gif);
 }
 
 td.l
 {
-  background-color     : #000000;
   vertical-align       : top;
   padding              : 3px;
-  filter               : alpha(opacity=70);
-  -moz-opacity         : 0.7;
-  -khtml-opacity       : 0.7;
-  opacity              : 0.7;
+}
+
+textarea
+{
+  width                : 100%;
 }
 
 div.z
