CSS-Fix: broken coloring of fliying fleets-2

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -53,7 +53,7 @@ th, td, input, select, textarea
   background-color     : #344566;
 }
 
-input, select, textarea
+input, select, textarea, div.z
 {
  color                : #E6EBFB;
 }
