INT: Overview: changed color coding for fleet schedule-2

--- a/skins/EpicBlue/default.css
+++ b/skins/EpicBlue/default.css
@@ -61,11 +61,11 @@
 }
 
 *.ownmissile {
-  color: orange;
+  color: sienna;
 }
 
 *.ownespionage {
-  color: lightorange;
+  color: orange;
 }
 
 *.owntransport {
