--- a/css/login.css
+++ b/css/login.css
@@ -96,7 +96,7 @@ body {
 .log_input
 {
   border:1px solid #000000;
-  background:#ffffff url(../templates/OpenGame/img/eingabe_back.png) repeat-x;
+  background:#ffffff url(../images/bg_login.png) repeat-x;
   color: #000000;
   font-size:10px;
   width: 100%;
