--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -145,36 +145,25 @@ h1
 .ov_user_total {color: #FF0000}
 .ov_user_rank {color: #FFFF00}
 
-#body_container
-{
-  height: 100%;
-  min-height: 100%;
-  position: realtive;
-}
-
-#page_footer
-{
-  float: right;
-  margin: 5px;
-}
-
 #page_body
 {
-  width: 100%;
-  text-align: center;
-  text-align: -moz-center;
+  margin-left: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: auto;
+}
 
-  margin-left: auto;
-  margin-right: auto;
+#left_menu_wrapper {
+  float:left;
+  width: 130px;
+  text-align: center;
+  padding-left:5px;
+  padding-right:5px;
 }
 
 #left_menu {
   font-weight: bold;
-  width: 135px;
-  padding-left:5px;
-  padding-right:5px;
-  text-align: center;
-  float: left;
+  width: 100%;
 }
 
 #left_menu #server_name {
