--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -26,9 +26,7 @@ body
 {
   color                : #E6EBFB;
   margin-top           : 5px;
-  margin-left          : 0px;
-  height               : 100%;
-  min-height            : 100%;
+  margin-left          : 1px;
   background           : #132544;
   background-image     : url(img/background.jpg);
   background-attachment: fixed;
@@ -154,36 +152,25 @@ h1
 .ov_user_total {color: #FF0000}
 .ov_user_rank {color: #FFFF00}
 
-#body_container
-{
-  height: 100%;
-  min-height: 100%;
-  position: realtive;
-}
-
-#page_footer
-{
-  float: right;
-  margin: 5px;
-}
-
 #page_body
 {
-  width: 100%;
-  text-align: center;
-  text-align: -moz-center;
+  margin-left: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: auto;
+}
 
-  margin-left: auto;
-  margin-right: auto;
+#left_menu_wrapper {
+  float:left;
+  width: 130px;
+  text-align: center;
+  padding-left:5px;
+  padding-right:5px;
 }
 
 #left_menu {
   font-weight: bold;
-  width: 135px;
-  padding-left:5px;
-  padding-right:5px;
-  text-align: center;
-  float: left;
+  width: 100%;
 }
 
 #left_menu #server_name {
@@ -277,5 +264,5 @@ div .ui-dialog-content table { background: #344055; }
 /* Pseudoelement to use colors from CSS in JS */
 #style_probe
 {
-  border-top-color: #6B90D3;  /*  Reserved for unit_preview border color*/
+  border-top-color: #6B90D3;  /*  Reserved for unit_preview border color */
 }
