Misc: Some syntax editing

--- a/design/css/login.css
+++ b/design/css/login.css
@@ -2,7 +2,7 @@
 @media screen
 {
   body {
-      background-image: url(../design/images/bg-unauthorized.jpg);
+      background-image: url(../images/bg-unauthorized.jpg);
       background-repeat: no-repeat;
   }
 }
