--- a/design/css/global.css
+++ b/design/css/global.css
@@ -58,7 +58,7 @@ ul /* Unmarked list */
 .icon-info { background-position: -32px 0px; }
 .icon-cancel { background-position: -48px 0px; }
 
-.icon_alpha /* Partially transparent background for over-planet-image icons */
+.icon_alpha, .alpha75 /* Partially transparent background for over-planet-image icons */
 {
   /* Fallback for web browsers that doesn't support RGBa */
   background: rgb(0, 0, 0);
@@ -68,6 +68,30 @@ ul /* Unmarked list */
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000);
   /* For IE 8*/
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000)";
+}
+
+.alpha50
+{
+  /* Fallback for web browsers that doesn't support RGBa */
+  background: rgb(0, 0, 0);
+  /* RGBa with 0.50 opacity */
+  background: rgba(0, 0, 0, 0.50);
+  /* For IE 5.5 - 7. 0.50*255 = 128 ~ 0x80 */
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000);
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000)";
+}
+
+.alpha25
+{
+  /* Fallback for web browsers that doesn't support RGBa */
+  background: rgb(0, 0, 0);
+  /* RGBa with 0.25 opacity */
+  background: rgba(0, 0, 0, 0.25);
+  /* For IE 5.5 - 7. 0.25*255 = 64 ~ 0x40 */
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#40000000, endColorstr=#40000000);
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#40000000, endColorstr=#40000000)";
 }
 
 /* jQuery-UI */
