SYS: Fully rewrote security code: login and registration pages, internal security-related functions

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -120,3 +120,8 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 {
   width: 100%;
 }
+
+#copyright
+{
+  text-align: center;
+}
